Menu da aplicação terminal criado. Configurações JavaFX retiradas.